syntax = "proto3";

package storageService;
option go_package = "/storageService";

message Status {
  bool successfully = 1;
  string message = 2;
  int64 httpStatus = 3;
}

message RegistrationRequest {
  int64 id = 1;
}

message RegistrationResponse {
  Status status = 1;
}

message UploadImageRequest {
  int64 id = 1;
  bytes image = 2;
  string format = 3;
}

message UploadImageResponse {
  Status status = 1;
  string link = 2;
}

message GetImageRequest {
  string link = 1;
}

message GetImageResponse {
  bytes image = 1;
  Status status = 2;
}

message GetLinkByIdAccountRequest {
  int64 id = 1;
}

message GetLinkByIdAccountResponse {
  string link = 1;
  Status status = 2;
}

message GetLinksByIdAccountsRequest {
  repeated int64 id = 1;
}

message GetLinksByIdAccountsResponse {
  map<int64, string> links = 1;
  Status status = 2;
}

service StorageService {
  rpc Registration(RegistrationRequest) returns (RegistrationResponse);
  rpc UploadImage(UploadImageRequest) returns (UploadImageResponse);
  rpc GetImage(GetImageRequest) returns (GetImageResponse);
  rpc GetLinkByIdAccount(GetLinkByIdAccountRequest) returns (GetLinkByIdAccountResponse);
  rpc GetLinksByIdAccounts(GetLinksByIdAccountsRequest) returns (GetLinksByIdAccountsResponse);
}